# OpenAI_Agents_SDK

./: README.md  prompt_and_context_eng.md
00_30_MCQS_CODE/: 05.py  07.py  08.py  09.py  10.py  12.py  14.py  16.py  17.py  18.py  20.py  21.py  22.py  24.py  25.py
00_Docs/03_swarm_anthropic_pattern/: readme.md
00_Docs/04_Agents_Class/: readme.md
00_Internal_working/tracing/: log.txt  main.py  pyproject.toml
00_Live_Sessions_Lev1_&_Lev2/: .env  agent_runner_notes.md  custom_cursor.py  k.json  main.py  pr.md  pyproject.toml  temp.html  top-k.html  top-p.html  user_database.json  weather.html  youtube.md
00_Live_Sessions_Lev1_&_Lev2/guard/: guard.py
00_Live_Sessions_Lev1_&_Lev2/handoff/: input_schem.py  invoke.py
00_Live_Sessions_Lev1_&_Lev2/level_1/: 00handoff.py  aghook.py  baseex.py  com.py  context.py  day2_tool.py  eex2.py  ex.py  ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  exceptions.py  extra.py  fn.py  main.py  (+15 more)
00_SDK_Practice_Projects/: 02.py  05.py  06.py  08.py
class_01/Introduction_Chainlit/hello/: pyproject.toml
class_01/Introduction_Chainlit/hello/src/hello/: __init__.py  chatbot.py
class_02/hello-agent/: .env  .gitignore  main.py  pyproject.toml
class_03/: main.py  pyproject.toml
class_04/: main.py  pyproject.toml  requirements.txt
class_05/: main.py  pyproject.toml
class_06/: main.py  pyproject.toml
class_07/: .env  .gitignore  main.py  pyproject.toml
class_08/: main.py  pyproject.toml
class_09/: main.py  pyproject.toml
class_10/: main.py  pyproject.toml
class_11/: main.py  pyproject.toml
class_12/: main.py  pyproject.toml
(+93 files in other folders)
