[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "agents>=1.4.0",
    "chainlit>=2.3.0",
    "nest-asyncio>=1.6.0",
    "openai-agent>=0.1.0",
    "python-dotenv>=1.1.0",
]
